--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <button class="btn btn-outline border-2 px-7 border-yellow-300 text-black">Login</button>
                         <a class="btn bg-primary-c px-7 ml-2 text-white">Register</a>
                     </div>
-                    <div class="dropdown">
+                    <div class="dropdown dropdown-end">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-11 w-11" container fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
