--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <script src="https://kit.fontawesome.com/1c6f81e379.js" crossorigin="anonymous"></script>
 
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         .sora-font {
             font-family: "Sora", serif;
         }
@@ -33,6 +37,56 @@
             font-family: "Poppins", serif;
             font-weight: 100;
             font-style: normal;
+        
+        }
+        header{
+            position: relative;
+            animation: mymove 15s infinite;
+        }
+
+        @keyframes mymove {
+
+
+            0% {
+                background-color: rgb(255, 233, 233);
+            }
+
+            10% {
+                background-color: rgba(154, 151, 255, 0.681);
+            }
+
+            20% {
+                background-color: rgba(62, 67, 29, 0.494);
+            }
+
+            30% {
+                background-color: rgba(226, 253, 222, 0.631);
+            }
+
+            40% {
+                background-color: rgba(247, 254, 162, 0.867);
+            }
+            40% {
+                background-color: rgb(255, 233, 233);
+            }
+
+            60% {
+                background-color: rgb(223, 222, 252);
+            }
+
+            70% {
+                background-color: rgba(222, 251, 254, 0.494);
+            }
+
+            80% {
+                background-color: rgba(105, 255, 82, 0.631);
+            }
+            90% {
+                background-color: rgba(226, 253, 222, 0.631);
+            }
+            100% {
+                background-color: rgba(247, 254, 162, 0.867);
+            }
         }
     </style>
 
@@ -51,10 +105,10 @@
     </script>
 </head>
 
-<body class="sora-font">
-    <header class="">
-        <nav class="container mx-auto px-4 pt-8">
-            <div class="navbar bg-base-100">
+<body class="sora-font m">
+    <header class=" bg-[#EFEBE3]">
+        <nav class="container mx-auto max-w-7xl  py-8">
+            <div class="navbar ">
                 <div class="navbar-start">
 
                     <div class="sm:pl-3">
@@ -78,8 +132,8 @@
                     </div>
                     <div class="dropdown dropdown-end">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-11 w-11" container fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-11 w-11" container fill="none"
+                                viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M4 6h16M4 12h8m-8 6h16" />
                             </svg>
@@ -94,6 +148,19 @@
                 </div>
             </div>
         </nav>
+        <section class="container mx-auto  max-w-7xl  mt-12 text-center">
+            <h2 class=" text-3xl md:text-6xl font-semibold mb-8 mx-4">
+                Freshness <span class="text-[#179800]">You Can <br>
+                    Count</span> On, Prices You’ll Love!
+            </h2>
+            <p class="md:text-xl mx-4 mb-9">
+                Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br> staples, we’ve got
+                you covered every day!
+            </p>
+            <div>
+                <img class="mx-auto" src="c2-assets/hero-vegetables.png" alt="">
+            </div>
+        </section>
     </header>
     <main>
 
