--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
         header{
             position: relative;
             animation: mymove 15s infinite;
+            box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
         }
 
         @keyframes mymove {
 
 
             0% {
-                background-color: rgb(255, 233, 233);
+                background-color: #EFEBE3;
             }
 
             10% {
-                background-color: rgba(154, 151, 255, 0.681);
+                background-color: rgba(31, 233, 112, 0.681);
             }
 
             20% {
@@ -163,7 +164,34 @@
         </section>
     </header>
     <main>
-
+        <section class="my-32">
+            <div class="max-w-7xl mx-auto px-4">
+                <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12">Services</h3>
+                <div class="grid md:grid-cols-3 gap-4">
+                    <div class="flex flex-col items-center  max-w-md mx-auto bg-[#EFEBE3] p-9  rounded rounded-lg">
+                        <div class="bg-white rounded rounded-full p-4">
+                            <img src="c2-assets/service.png" alt="service">
+                        </div>
+                        <h4 class="text-2xl font-semibold mt-6 mb-2">24/7 Services</h4>
+                        <p class="max-w-xs text-center mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                    </div>
+                    <div class="flex flex-col items-center max-w-md mx-auto bg-[#EFEBE3] p-9   rounded-lg">
+                        <div class="bg-white rounded rounded-full p-4">
+                            <img class="" src="c2-assets/delivery.png" alt="delivary">
+                        </div>
+                        <h4 class="text-2xl font-semibold mt-6 mb-2">Fast Delivery</h4>
+                        <p class="max-w-xs text-center mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                    </div>
+                    <div class="flex flex-col items-center max-w-md mx-auto bg-[#EFEBE3] p-9  rounded rounded-lg">
+                        <div class="bg-white rounded rounded-full p-4">
+                            <img src="c2-assets/healthy.png" alt="health">
+                        </div>
+                        <h4 class="text-2xl font-semibold mt-6 mb-2">Healthy Products</h4>
+                        <p class="max-w-xs text-center mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
