--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     <script src="https://kit.fontawesome.com/1c6f81e379.js" crossorigin="anonymous"></script>
 
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
+
         .sora-font {
             font-family: "Sora", serif;
         }
@@ -37,9 +38,10 @@
             font-family: "Poppins", serif;
             font-weight: 100;
             font-style: normal;
-        
+
         }
-        header{
+
+        header {
             position: relative;
             animation: mymove 15s infinite;
             box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
@@ -67,6 +69,7 @@
             40% {
                 background-color: rgba(247, 254, 162, 0.867);
             }
+
             40% {
                 background-color: rgb(255, 233, 233);
             }
@@ -82,9 +85,11 @@
             80% {
                 background-color: rgba(105, 255, 82, 0.631);
             }
+
             90% {
                 background-color: rgba(226, 253, 222, 0.631);
             }
+
             100% {
                 background-color: rgba(247, 254, 162, 0.867);
             }
@@ -149,6 +154,8 @@
                 </div>
             </div>
         </nav>
+
+        <!-- banner section -->
         <section class="container mx-auto  max-w-7xl  mt-12 text-center">
             <h2 class=" text-3xl md:text-6xl font-semibold mb-8 mx-4">
                 Freshness <span class="text-[#179800]">You Can <br>
@@ -164,33 +171,156 @@
         </section>
     </header>
     <main>
+        <!-- service section -->
         <section class="my-32">
             <div class="max-w-7xl mx-auto px-4">
-                <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12">Services</h3>
+                <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12 ">Services</h3>
                 <div class="grid md:grid-cols-3 gap-4">
                     <div class="flex flex-col items-center  max-w-md mx-auto bg-[#EFEBE3] p-9  rounded rounded-lg">
                         <div class="bg-white rounded rounded-full p-4">
                             <img src="c2-assets/service.png" alt="service">
                         </div>
                         <h4 class="text-2xl font-semibold mt-6 mb-2">24/7 Services</h4>
-                        <p class="max-w-xs text-center mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                        <p class="max-w-xs text-center mb-11">24/7 Service – Always available, providing round-the-clock
+                            assistance for your needs anytime, anywhere, without delays or interruptions.
+
+                        </p>
                     </div>
                     <div class="flex flex-col items-center max-w-md mx-auto bg-[#EFEBE3] p-9   rounded-lg">
                         <div class="bg-white rounded rounded-full p-4">
                             <img class="" src="c2-assets/delivery.png" alt="delivary">
                         </div>
                         <h4 class="text-2xl font-semibold mt-6 mb-2">Fast Delivery</h4>
-                        <p class="max-w-xs text-center mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                        <p class="max-w-xs text-center mb-11">Fast Delivery – Swift, reliable shipping ensures your
+                            orders arrive quickly, saving you time with seamless, hassle-free service.</p>
                     </div>
                     <div class="flex flex-col items-center max-w-md mx-auto bg-[#EFEBE3] p-9  rounded rounded-lg">
                         <div class="bg-white rounded rounded-full p-4">
                             <img src="c2-assets/healthy.png" alt="health">
                         </div>
                         <h4 class="text-2xl font-semibold mt-6 mb-2">Healthy Products</h4>
-                        <p class="max-w-xs text-center mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                        <p class="max-w-xs text-center mb-11">Health – Prioritizing well-being through quality products
+                            and services, promoting a healthier lifestyle for a happier, better you.</p>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- Popular Products -->
+        <section class="bg-[#EFEBE3]">
+            <div class="max-w-7xl mx-auto pt-36">
+                <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12 ">Popular Products</h3>
+                <div class="flex">
+                    <div>
+
+                    </div>
+                    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mx-auto px-4">
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/potato.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
+                                </div>
+                                <h4 class="md:text-2xl text-base font-medium">Potato 1 KG</h4>
+                                <h4 class=" md:text-xs font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/onion.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Onion 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/tomato.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Tomato 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/tomato.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Tomato 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/potato.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Potato 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/onion.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Onion 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/potato.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Potato 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/onion.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Onion 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+                        <div class="bg-white p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/tomato.png" alt="">
+                            <div class="px-4">
+                                <div class="flex items-center">
+                                    <i class="fa-solid text-yellow-500 fa-star"></i>
+                                    <h5 class="ml-2">4.5</h5>
+                                </div>
+                                <h4 class="text-2xl font-medium">Tomato 1 KG</h4>
+                                <h4 class="font-medium">$39.99</h4>
+                            </div>
+                        </div>
+
+                        
+
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
