--- a/index.html
+++ b/index.html
@@ -211,112 +211,109 @@
             <div class="max-w-7xl mx-auto pt-36">
                 <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12 ">Popular Products</h3>
                 <div class="flex">
-                    <div>
+                    <!-- <div>
 
-                    </div>
-                    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mx-auto px-4">
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/potato.png" alt="">
-                            <div class="px-4">
+                    </div> -->
+                    <div class="grid grid-cols-2 md:grid-cols-3 gap-2 md:gap-4 mx-auto px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/potato.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
                                     <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
                                 <h4 class="md:text-2xl text-base font-medium">Potato 1 KG</h4>
-                                <h4 class=" md:text-xs font-medium">$39.99</h4>
+                                <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/onion.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/onion.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Onion 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-base font-medium">Onion 1 KG</h4>
+                                <h4 class=" md:text-base text-xs text- font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/tomato.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/tomato.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Tomato 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>          
+                                <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/tomato.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/onion.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Tomato 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-base font-medium">Onion 1 KG</h4>
+                                <h4 class=" md:text-base text-xs text- font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/potato.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/tomato.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Potato 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>          
+                                <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/onion.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/potato.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Onion 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-base font-medium">Potato 1 KG</h4>
+                                <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/potato.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/potato.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Potato 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-base font-medium">Potato 1 KG</h4>
+                                <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/onion.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/onion.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Onion 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-base font-medium">Onion 1 KG</h4>
+                                <h4 class=" md:text-base text-xs text- font-medium">$39.99</h4>
                             </div>
                         </div>
-                        <div class="bg-white p-4 rounded-xl flex items-center">
-                            <img class="bg-slate-300 rounded-md w-20 h-20" src="c2-assets/tomato.png" alt="">
-                            <div class="px-4">
+                        <div class="bg-white hidden md:flex p-2 md:p-4 rounded-xl flex items-center">
+                            <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/tomato.png" alt="">
+                            <div class="md:px-4 px-2">
                                 <div class="flex items-center">
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
-                                    <h5 class="ml-2">4.5</h5>
+                                    <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="text-2xl font-medium">Tomato 1 KG</h4>
-                                <h4 class="font-medium">$39.99</h4>
+                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>          
+                                <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
-
-                        
-
                     </div>
                 </div>
             </div>
