--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
                 background-color: rgba(247, 254, 162, 0.867);
             }
         }
+        .bg-l{
+            background:linear-gradient(145deg, rgb(255, 234, 0)-15%, rgba(255, 255, 255, 0)100%), url('/c2-assets/vegetable-offer.png');
+            background-repeat: no-repeat
+            
+        }
+        .bg-custom{
+            background-image:;
+            background-repeat: no-repeat;
+            
+            max-width: 420px;
+            padding: 48px;
+        }
     </style>
 
 
@@ -210,12 +222,23 @@
         <section class="bg-[#EFEBE3]">
             <div class="max-w-7xl mx-auto pt-36">
                 <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12 ">Popular Products</h3>
-                <div class="flex">
-                    <!-- <div>
 
-                    </div> -->
-                    <div class="grid grid-cols-2 md:grid-cols-3 gap-2 md:gap-4 mx-auto px-4">
-                        <div class="bg-white p-2 md:p-4 rounded-xl flex items-center">
+
+
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+
+                    <!-- offer -->
+                    <div class="md:col-span-1 bg-l">
+                        <div class="bg-custom">
+                            <h2 class="text-2xl font-bold mb-7  text-white">30% off</h2>
+                            <p class="mb-6">Discover a world of treats, toys, and<br>  essentials handpicked for</p>
+                            <button class="bg-white px-4 py-2 text-xl font-medium rounded-lg">Buy Now</button>
+                        </div>
+                    </div>
+
+                    <!-- popular  -->
+                    <div class="grid md:col-span-2  grid-cols-2 md:grid-cols-3 gap-2 md:gap-4 mx-auto px-4">
+                        <div class="bg-white w- p-2 md:p-4 rounded-xl flex items-center">
                             <img class="bg-slate-200 rounded-md md:w-20 md:h-20" src="c2-assets/potato.png" alt="">
                             <div class="md:px-4 px-2">
                                 <div class="flex items-center">
@@ -321,7 +344,10 @@
         </section>
     </main>
     <footer>
-
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+            <div class="md:col-span-2 bg-gray-200 p-4">66% Width</div>
+            <div class="md:col-span-1 bg-gray-300 p-4">33% Width</div>
+          </div>
     </footer>
 
 </body>
