--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         <!-- Popular Products -->
         <section class="bg-[#EFEBE3]">
-            <div class="max-w-7xl mx-auto pt-36">
+            <div class="max-w-7xl mx-auto  px-4 pb-20 pt-36">
                 <h3 class="text-2xl text-[#179800] font-semibold md:text-3xl mb-12 ">Popular Products</h3>
 
 
@@ -222,7 +222,7 @@
                 <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 mx-auto ">
 
                     <!-- offer -->
-                    <div class="md:col-span-1 mx-auto m-3  p-10  pl-12 pr-20 bg-l">
+                    <div class="md:col-span-1 mx-auto mx-8  p-10  pl-12 pr-20 bg-l">
                             <h2 class="text-2xl font-bold pt-12 mb-7  text-white">30% off</h2>
                             <p class="mb-6">Discover a world of treats, toys, and<br>  essentials handpicked for</p>
                             <button class="bg-white px-4 py-2 md:mb-40 sm:mb-10 text-xl font-medium rounded-lg">Buy Now</button>
@@ -334,6 +334,39 @@
             </div>
 
         </section>
+
+
+        <!-- Arrival section -->
+
+        <section class="my-32 max-w-7xl mx-auto px-3">
+            <div class="grid lg:grid-cols-5 gap-3 ">
+                <div class="lg:col-span-3 flex justify-around bg-[#115414] rounded-2xl">
+                    <div class=" ml-5">
+                        <img class="mt-12" src="c2-assets/dawat-logo.png" alt="">
+                        <button class="md:px-6 px-4 md:py-4 py-2 my-7 rounded-lg text-white text-xs bg-[#63B76D]">Cook Exotic Dishes</button>
+                        <h2 class="md:text-3xl text-xl mb-12 text-white">UP to <span class="font-bold">20% OFF</span></h2>
+                    </div>
+                    <div>
+                        <img class="mt-7" src="c2-assets/dawat-mock-up.png" alt="">
+                    </div>
+                </div>
+
+
+                <!-- indian gate -->
+                <div class="lg:col-span-2 flex justify-around bg-[#102861] rounded-2xl ">
+                    <div class="ml-5">
+                        <img class="mt-5" src="c2-assets/india-gate-logo.png" alt="">
+                        <button class="md:px-6 px-4 md:py-4 py-2 my-7 rounded-lg text-white text-xs bg-[#63B76D]">Cook Exotic Dishes</button>
+                        <h2 class="md:text-3xl text-xl mb-12 text-white">UP to <span class="font-bold">20% OFF</span></h2>
+                    </div>
+                    <div>
+                        <img class="mt-7 pr-2"  src="c2-assets/india-gate-mock-up.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </main>
     <footer class="mt-60">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
