--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                 background-color: rgba(247, 254, 162, 0.867);
             }
         }
-        .bg-l{
-            background:linear-gradient(145deg, rgb(226, 207, 1)-15%, rgba(255, 255, 255, 0)100%), url('/c2-assets/vegetable-offer.png');
+
+        .bg-l {
+            background: linear-gradient(145deg, rgb(226, 207, 1)-15%, rgba(255, 255, 255, 0)100%), url('/c2-assets/vegetable-offer.png');
             background-repeat: no-repeat;
             background-position: bottom right;
             border-radius: 16px;
@@ -223,9 +224,10 @@
 
                     <!-- offer -->
                     <div class="md:col-span-1 mx-auto mx-8  p-10  pl-12 pr-20 bg-l">
-                            <h2 class="text-2xl font-bold pt-12 mb-7  text-white">30% off</h2>
-                            <p class="mb-6">Discover a world of treats, toys, and<br>  essentials handpicked for</p>
-                            <button class="bg-white px-4 py-2 md:mb-40 sm:mb-10 text-xl font-medium rounded-lg">Buy Now</button>
+                        <h2 class="text-2xl font-bold pt-12 mb-7  text-white">30% off</h2>
+                        <p class="mb-6">Discover a world of treats, toys, and<br> essentials handpicked for</p>
+                        <button class="bg-white px-4 py-2 md:mb-40 sm:mb-10 text-xl font-medium rounded-lg">Buy
+                            Now</button>
                     </div>
 
                     <!-- popular  -->
@@ -259,7 +261,7 @@
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
                                     <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>          
+                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>
                                 <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
@@ -281,7 +283,7 @@
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
                                     <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>          
+                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>
                                 <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
@@ -325,7 +327,7 @@
                                     <i class="fa-solid text-yellow-500 fa-star"></i>
                                     <h5 class="ml-2 text-xs md:text-base ">4.5</h5>
                                 </div>
-                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>          
+                                <h4 class="md:text-2xl text-sm font-medium">Tomato 1 KG</h4>
                                 <h4 class=" md:text-base text-xs font-medium">$39.99</h4>
                             </div>
                         </div>
@@ -338,13 +340,15 @@
 
         <!-- Arrival section -->
 
-        <section class="my-32 max-w-7xl mx-auto px-3">
+        <section class="mt-32 max-w-7xl mx-auto px-3">
             <div class="grid lg:grid-cols-5 gap-3 ">
                 <div class="lg:col-span-3 flex justify-around bg-[#115414] rounded-2xl">
                     <div class=" ml-5">
                         <img class="mt-12" src="c2-assets/dawat-logo.png" alt="">
-                        <button class="md:px-6 px-4 md:py-4 py-2 my-7 rounded-lg text-white text-xs bg-[#63B76D]">Cook Exotic Dishes</button>
-                        <h2 class="md:text-3xl text-xl mb-12 text-white">UP to <span class="font-bold">20% OFF</span></h2>
+                        <button class="md:px-6 px-4  md:py-4 py-2 my-7 rounded-lg text-white text-xs bg-[#63B76D]">Cook
+                            Exotic Dishes</button>
+                        <h2 class="md:text-3xl text-xl mb-12 text-white">UP to <span class="font-bold">20% OFF</span>
+                        </h2>
                     </div>
                     <div>
                         <img class="mt-7" src="c2-assets/dawat-mock-up.png" alt="">
@@ -356,25 +360,88 @@
                 <div class="lg:col-span-2 flex justify-around bg-[#102861] rounded-2xl ">
                     <div class="ml-5">
                         <img class="mt-5" src="c2-assets/india-gate-logo.png" alt="">
-                        <button class="md:px-6 px-4 md:py-4 py-2 my-7 rounded-lg text-white text-xs bg-[#63B76D]">Cook Exotic Dishes</button>
-                        <h2 class="md:text-3xl text-xl mb-12 text-white">UP to <span class="font-bold">20% OFF</span></h2>
+                        <button class="md:px-6 px-4 md:py-4 py-2 my-7 rounded-lg text-white text-xs bg-[#63B76D]">Cook
+                            Exotic Dishes</button>
+                        <h2 class="md:text-3xl text-xl mb-12 text-white">UP to <span class="font-bold">20% OFF</span>
+                        </h2>
                     </div>
                     <div>
-                        <img class="mt-7 pr-2"  src="c2-assets/india-gate-mock-up.png" alt="">
+                        <img class="mt-7 pr-2" src="c2-assets/india-gate-mock-up.png" alt="">
                     </div>
                 </div>
             </div>
-
         </section>
 
-    </main>
-    <footer class="mt-60">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-            <div class="md:col-span-2 bg-gray-200 p-4">66% Width</div>
-            <div class="md:col-span-1 bg-gray-300 p-4">33% Width</div>
-          </div>
-    </footer>
+        <!-- relative section -->
+        <section class=" md:px-3 max-w-7xl mx-auto">
+            <div
+                class="flex flex-col mx-4 px-8 lg:mx-0 lg:flex-row justify-around items-center bg-[#ffe7d3] lg:px-56 rounded-2xl py-10 relative translate-y-[50%] ">
+                <!-- Image relative -->
+                <div class="mb-5">
+                    <img src="c2-assets/vegetable-busket.png" alt="" />
+                </div>
+                <!-- Text -->
+                <div class="ml-2">
+                    <h3 class="text-2xl font-bold text-[#179800] mb-5">
+                        Get Pawsome News!
+                    </h3>
+                    <p class="text-[1.15rem] mb-7">
+                        Exclusive training tips, ticks, product deals and more.
+                    </p>
+                    <input class=" py-3 pr-24 pl-4 rounded-lg " type="email" name="" id=""
+                        placeholder="Enter Your Mail">
+                    <br />
+                    <button class="btn bg-[#179800] text-white mt-8 text-[1.25rem]">
+                        Subscribe
+                    </button>
+                </div>
+            </div>
+        </section>
 
+
+    </main>
+    <footer class="bg-[#179800]">
+        <section class="md:container pt-64 mx-auto md:px-3">
+            <!-- Mother -->
+            <div
+                class="pt-92 pb-36 flex flex-col lg:flex-row justify-between items-start lg:items-center mx-auto  max-w-7xl px-7 lg:px-0 mt-40 lg:mt-0">
+                <!-- !Childs -->
+                <!-- Brand -->
+                <div class="w-426px">
+                    <div class="flex items-center gap-2">
+                        <!-- Logo -->
+                        <div>
+                            <a href="#" class="cursor-pointer">
+                                <img src="c2-assets/logo-footer.png" alt="Footer Logo" />
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="mt-7 opacity-70 text-white">
+                        Discover a world of treats, toys, and <br> essentials handpicked for your <br> furry friends
+                    </div>
+                </div>
+                <!-- Links -->
+                <div class="my-8 lg:my-0">
+                    <ul class="flex-col opacity-70 text-white space-y-5 cursor-pointer">
+                        <li>Product</li>
+                        <li>Services</li>
+                        <li>Contact us</li>
+                    </ul>
+                </div>
+                <!-- socials -->
+                <div>
+                    <h3 class="text-base opacity-70 text-white font-medium mb-6">Follow Us</h3>
+                    <div class="flex gap-5 cursor-pointer">
+                        <i class="fa-brands text-2xl fa-facebook"></i>
+                        <i class="fa-brands text-2xl fa-instagram"></i>
+                        <i class="fa-brands text-2xl fa-linkedin"></i>
+                        <i class="fa-brands text-2xl fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
