done all alhamdulillah

--- a/index.html
+++ b/index.html
@@ -336,6 +336,26 @@
             </div>
 
         </section>
+       
+        <section class="max-w-96 mx-auto mt-20">
+            <h2 class="text-4xl text-center mb-6 font-bold">Best sell</h2>
+            <div class="carousel carousel-vertical rounded-box h-96">
+                <div class="carousel-item h-full">
+                  <img src="c2-assets/1.jpg" />
+                </div>
+                <div class="carousel-item h-full">
+                  <img src="c2-assets/4.jpg" />
+                </div>
+                <div class="carousel-item h-full">
+                    <img src="c2-assets/7.jpg" />
+                  </div>
+                <div class="carousel-item h-full">
+                    <img src="c2-assets/5.jpg" />
+                  </div>
+                </div>
+              </div>
+        </section>
+
 
 
         <!-- Arrival section -->
