--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
         </section>
        
-        <section class="max-w-96 mx-auto mt-20">
+        <section class="max-w-96 mx-auto mt-20 px-3">
             <h2 class="text-4xl text-center mb-6 font-bold">Best sell</h2>
             <div class="carousel carousel-vertical rounded-box h-96">
                 <div class="carousel-item h-full">
